<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Throttle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="throttle_slogan_line1">GREAT CLUBS. GREAT RIDES</string>
    <string name="throttle_slogan_line2">FOR THE RIDERS IN YOU</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_search_by_name">Search by name</string>

    <!-- Message / Error -->
    <string name="str_sorry">Sorry</string>
    <string name="str_service_error">Something went wrong, Please try again later.</string>
    <string name="str_info">Info</string>
    <string name="str_internet_error">Please check your internet connection</string>

    <!-- Login SignUp Screen -->
    <string name="str_btn_text_drive">TEST DRIVE</string>
    <string name="str_btn_get_started">GET STARTED</string>
    <string name="str_btn_forgot_password">Forgot Password</string>
    <string name="str_btn_login">LOGIN</string>
    <string name="str_btn_sign_up">SIGNUP</string>
    <string name="str_btn_register">REGISTER</string>
    <string name="str_login_and_signup">Login &amp; SignUp</string>
    <string name="str_forgot_password">Forgot Password</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_email">Email</string>

    <!-- Profile Basic Screen -->
    <string name="str_name">Name</string>
    <string name="str_dob">Date of birth</string>
    <string name="str_city">City</string>
    <string name="str_gender">Gender</string>
    <string name="str_mobile_no">Mobile no</string>
    <string name="str_email_id">Email id</string>
    <string name="str_emergency_no">Emergency no</string>
    <string name="str_blood_group">Blood group</string>
    <string name="str_dcoument_name">Document name</string>
    <string name="str_exp_date">Expiry date</string>
    <string name="str_number">Number</string>
    <string name="str_story_title">Story title</string>
    <string name="str_story_des">First things frist: you"'"ll need to buy a bike. If you don"'"t have a bike, you can buy your own today at Amazon.com</string>
    <string name="str_btn_save">SAVE</string>
    <string name="str_btn_remove">REMOVE</string>
    <string name="str_btn_next">NEXT</string>
    <string name="str_btn_create">CREATE</string>

    <string-array name="gender_options">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="blood_group_options">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <!-- Clubs -->
    <string name="str_btn_topclub">Top Clubs</string>
    <string name="str_btn_myclubs">My Clubs</string>
    <string name="str_add_bike_photo">Add Bike Photo</string>
    <string name="str_open_image_gallery">Open Image gallery</string>
    <string name="str_take_photo">Take a photo</string>

    <!-- Docs -->
    <string name="str_add_doc_photo">Add Doc Photo</string>

    <!-- Rides -->
    <string name="str_btn_allrides">All Rides</string>
    <string name="str_btn_featured">Featured</string>
    <string name="str_btn_myrides">My Rides</string>
    <string name="str_ride_des">Describe your ride, why should someone join this ride, What are the activities and fun elements planned during the ride. How it is going to be a different experience for all. Make this description to the maximum riders going for the ride.</string>
    <string name="str_ride_faq_ans">Provide the answer for question like the ones associated with the ride fitness, bike conditions, tyers and gear required duting the ride, back packing and clothing suited for the ride etc.</string>

    <string-array name="add_ride_info_options">
        <item>I will invite riders later</item>
        <item>Only club riders can join this ride</item>
        <item>It is an open ride which any rider can join</item>
    </string-array>
    <string-array name="add_ride_route_options">
        <item>This is the starting point of the ride</item>
        <item>There is a halt at this point on the ride</item>
        <item>This is the end point of the ride</item>
    </string-array>
    <string-array name="add_product_sell_options">
        <item>I want to sell it at fixed price</item>
        <item>I want to auction this product</item>
    </string-array>
    <string-array name="add_product_old_new">
        <item>Old Item</item>
        <item>New Item</item>
    </string-array>

    <!-- Store -->
    <string-array name="store_more_catogries">
        <item>Jackets</item>
        <item>Helmets</item>
        <item>Others</item>
    </string-array>

    <!-- Main Activity -->
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Profile</item>
        <item>Clubs</item>
        <item>Rides</item>
        <item>Store</item>
        <item>Logout</item>
    </string-array>

    <!-- Drop down list item -->
    <string-array name="nav_drawer_sub_items">
        <item>Profile</item>
        <item>Add Club</item>
        <item>Add Ride</item>
    </string-array>

    <string name="basic_action_1">Action_1</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Profile Screen -->
    <string name="tab_words">Words</string>
    <string name="tab_numbers">Numbers</string>

</resources>