<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.throttle"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/layoutRideButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:visibility="gone"
        android:weightSum="6" >

        <Button
            android:id="@+id/btnAllRides"
            style="@style/btnGrey"
            android:layout_marginRight="4dip"
            android:layout_weight="2"
            android:text="@string/str_btn_allrides" />

        <Button
            android:id="@+id/btnFeaturedRide"
            style="@style/btnGrey"
            android:layout_marginRight="4dip"
            android:layout_weight="2"
            android:text="@string/str_btn_featured" />

        <Button
            android:id="@+id/btnMyRides"
            style="@style/btnGrey"
            android:layout_weight="2"
            android:text="@string/str_btn_myrides" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/rideSearchFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutRideButtons" >

        <EditText
            android:id="@+id/edtSearchRide"
            style="@style/edit_text"
            android:layout_margin="10dip"
            android:hint="@string/hint_search_by_name" />

        <ImageView
            android:id="@+id/imgBtnRideSearch"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/search_icon" />
    </FrameLayout>

    <com.fortysevendeg.swipelistview.SwipeListView
        android:id="@+id/rideListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/red_color"
        android:dividerHeight="5dip"
        android:layout_below="@id/rideSearchFrame"
        app:swipeBackView="@+id/back"
        app:swipeCloseAllItemsWhenMoveList="true"
        app:swipeFrontView="@+id/front"
        app:swipeMode="both" />

</RelativeLayout>