<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="20dip"
    tools:context="com.throttle.SplashScreen" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="170dip"
        android:layout_height="150dip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dip"
        android:layout_marginTop="50dip"
        android:visibility="gone"
        android:background="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/txtSlogan1"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_below="@id/imgLogo"
        android:layout_marginRight="10dip"
        android:layout_centerVertical="true"
        android:background="@drawable/orange_patch" >

        <TextView
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/throttle_slogan_line1" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/txtSlogan2"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_below="@id/txtSlogan1"
        android:layout_marginLeft="30dip"
        android:layout_centerVertical="true"
        android:background="@drawable/gray_patch" >

        <TextView
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/throttle_slogan_line2" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/btnTestDrive"
            style="@style/btnOrange"
            android:layout_marginRight="8dip"
            android:layout_weight="0.5"
            android:onClick="onTestDrive"
            android:text="@string/str_btn_text_drive" />

        <Button
            android:id="@+id/btnGetStarted"
            style="@style/btnGrey"
            android:layout_marginRight="8dip"
            android:layout_weight="0.5"
            android:onClick="onGetStarted"
            android:text="@string/str_btn_get_started" />
    </LinearLayout>

</RelativeLayout>