<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tab_panel"
    android:padding="20dip" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layoutBikesOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edtStoriesTitle"
                style="@style/edit_text"
                android:layout_marginRight="5dip"
                android:layout_weight="0.5"
                android:hint="@string/str_story_title" />

            <EditText
                android:id="@+id/edtStoriesDes"
                style="@style/edit_text_area"
                android:layout_weight="0.5"
                android:hint="@string/str_story_des"
                android:maxLines="4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:background="@drawable/image_holder"
                android:orientation="horizontal"
                android:padding="10dip"
                android:weightSum="1.0" >

                <ImageView
                    android:id="@+id/imgStoriesUploadPic"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/upload_border_bg"
                    android:scaleType="center"
                    android:src="@drawable/story_icon" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtStoriesAddBikePhoto"
                        style="@style/Heading4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add Story Photo" />

                    <Button
                        android:id="@+id/txtStoriesOpenImageGallery"
                        style="@style/btnOpenGallery"
                        android:layout_margin="5dip"
                        android:drawableLeft="@drawable/gallery_icon"
                        android:text="@string/str_open_image_gallery"
                        android:layout_marginBottom="10dip" />

                    <Button
                        android:id="@+id/txtStoriesTakeAPhoto"
                        style="@style/btnTakePhoto"
                        android:layout_margin="5dip"
                        android:drawableLeft="@drawable/camera_icon"
                        android:text="@string/str_take_photo" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBikesTwo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:weightSum="1.0" >

                <Button
                    android:id="@+id/btnStoriesSave"
                    style="@style/btnGrey"
                    android:layout_marginRight="8dip"
                    android:layout_weight="0.5"
                    android:text="@string/str_btn_save" />

                <Button
                    android:id="@+id/btnStoriesRemove"
                    style="@style/btnGrey"
                    android:layout_marginRight="8dip"
                    android:layout_weight="0.5"
                    android:text="@string/str_btn_remove" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/storiesGridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:horizontalSpacing="2dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>