<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tab_panel"
    android:padding="20dip" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layoutAddRideRouteOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edtAddRideFAQ"
                style="@style/edit_text"
                android:hint="Add a frequently asked questions" />

            <EditText
                android:id="@+id/edtAddRideFAQAnswer"
                style="@style/edit_text_area"
                android:layout_marginLeft="5dip"
                android:layout_weight="0.5"
                android:hint="@string/str_ride_faq_ans"
                android:maxLines="5" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dip"
                android:layout_marginBottom="10dip"
                android:background="@drawable/divider_horizontal" />

            <LinearLayout
                android:id="@+id/layoutAddRideRouteTwo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:weightSum="1.0" >

                <Button
                    android:id="@+id/btnAddRideFAQSave"
                    style="@style/btnGrey"
                    android:layout_marginRight="8dip"
                    android:layout_weight="0.5"
                    android:text="@string/str_btn_save" />

                <Button
                    android:id="@+id/btnAddRideFAQRemove"
                    style="@style/btnGrey"
                    android:layout_marginRight="8dip"
                    android:layout_weight="0.5"
                    android:text="@string/str_btn_remove" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dip"
                android:layout_marginBottom="10dip"
                android:background="@drawable/divider_horizontal" />

            <LinearLayout
                android:id="@+id/layoutAddFAQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/btnAddRideFAQNext"
                style="@style/btnGrey"
                android:layout_marginRight="8dip"
                android:layout_weight="0.5"
                android:text="@string/str_btn_next" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>