<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="20dip"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingTop="20dip" >

    <RelativeLayout
        android:id="@+id/loginRelLayout1"
        android:layout_width="fill_parent"
        android:layout_height="300dip"
        android:background="@drawable/bg_patch"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="30dip"
        android:layout_marginBottom="10dip" >

        <TextView
            android:id="@+id/txtLoginAndSignUp"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dip"
            android:text="@string/str_login_and_signup" />

        <FrameLayout
            android:id="@+id/frameLoginUserNameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLoginAndSignUp" >

            <EditText
                android:id="@+id/edtLoginUserName"
                style="@style/edit_text_with_icon"
                android:hint="@string/hint_username" />

            <ImageView
                style="@style/edit_text_icon_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_icon" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLoginPassWordText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frameLoginUserNameText" >

            <EditText
                android:id="@+id/edtLoginPassword"
                style="@style/edit_text_with_icon"
                android:layout_below="@id/edtLoginUserName"
                android:hint="@string/hint_password"
                android:password="true" />

            <ImageView
                style="@style/edit_text_icon_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_icon" />
        </FrameLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/btnOrange"
            android:layout_below="@id/frameLoginPassWordText"
            android:onClick="onLogin"
            android:text="@string/str_btn_login" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="15dip"
            android:text="@string/str_forgot_password"
            android:textSize="16sp"
            android:textColor="@color/white_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginRelLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginRelLayout1"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/imgOR"
            android:layout_width="wrap_content"
            android:layout_height="20dip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:src="@drawable/or" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_below="@id/imgOR"
            android:layout_toLeftOf="@+id/btnTwitter"
            android:background="@drawable/facebook_icon" />

        <Button
            android:id="@+id/btnTwitter"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_below="@id/imgOR"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/twitter_icon" />

        <Button
            android:id="@+id/btnGooglePlus"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_below="@id/imgOR"
            android:layout_toRightOf="@id/btnTwitter"
            android:background="@drawable/g_plus_icon" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnSignUp"
        style="@style/btnOrange"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:onClick="onSignUp"
        android:text="@string/str_btn_sign_up" />

</RelativeLayout>