<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.throttle"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/layoutClubButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:visibility="gone"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/btnClubTopClubs"
            style="@style/btnGrey"
            android:layout_marginRight="8dip"
            android:layout_weight="0.5"
            android:text="@string/str_btn_topclub" />

        <Button
            android:id="@+id/btnClubMyClubs"
            style="@style/btnGrey"
            android:layout_marginLeft="8dip"
            android:layout_weight="0.5"
            android:text="@string/str_btn_myclubs" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/clubSearchFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutClubButtons" >

        <EditText
            android:id="@+id/edtSearchClub"
            style="@style/edit_text"
            android:layout_margin="10dip"
            android:hint="@string/hint_search_by_name" />

        <ImageView
            android:id="@+id/imgBtnClubSearch"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/search_icon" />
    </FrameLayout>

    <com.fortysevendeg.swipelistview.SwipeListView
        android:id="@+id/clubListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/clubSearchFrame"
        app:swipeBackView="@+id/back"
        android:divider="@color/red_color"
        android:dividerHeight="5dip"
        app:swipeCloseAllItemsWhenMoveList="true"
        app:swipeFrontView="@+id/front"
        app:swipeMode="both" />

</RelativeLayout>